--- a/template/ManageUserMembership.html
+++ b/template/ManageUserMembership.html
@@ -90,7 +90,7 @@ supporting your business. <a href="">Learn more</a> of different memberships and
 				</td>
 				<td>{{ m.get().order_id }}</td>
 				<td>
-					<span class="command-link" role="{{ m.role }}" item="cancel-membership">Cancel</span>
+					<span class="command-link" role="{{ m.get().role }}" item="cancel-membership">Cancel</span>
 				</td>
 			</tr>
 		{% endfor %}
