Add has_trialed flag to contact so trial membership can only be signed up once for a contact.

--- a/template/BrowseBuyOrder.html
+++ b/template/BrowseBuyOrder.html
@@ -15,7 +15,7 @@
 						zoomType: 'xy'
 					},	
 					title: {
-						text: '医生 Risk Profile'
+						text: '医生分布图'
 					},
 					xAxis:{
 						title:{
@@ -253,7 +253,7 @@
 		 		userRiskProfile();
 		 	{% endif %}
 		{% endif %}
-
+		
 		// view switcher
 		j$('#switch-list-view').click(function(){
 			j$('#unfilledOrderPinterest').hide();
