Using jquery 1.9.1 instead of 2.0 since jquery 2.0 dropped support to IE < 9

--- a/template/base.html
+++ b/template/base.html
@@ -6,8 +6,8 @@
 	<title>Anthem Market Place</title>
 	<meta name="author" content="Feng X.">
 	<script type="text/javascript" src="/_ah/channel/jsapi"></script>
-
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+	
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 	<script type="text/javascript">
 		// some global initialization
 		var j$=jQuery.noConflict();
