Add a function to list all online users available for chat

--- a/template/ManageUserContact.html
+++ b/template/ManageUserContact.html
@@ -91,6 +91,11 @@ by upating your Google account.
 </div>
 
 <div class="quick-pane">
+	<label class="ss-label fixed-width-label">Reputation</label>
+	{{ me.reputation_score }}
+</div>
+
+<div class="quick-pane">
 	<span style="float:right;">
 	<a class="command-link" id="add-comm">Add</a>
 	</span>
