Fixed footer contact us to chat @Admin

--- a/template/base.html
+++ b/template/base.html
@@ -161,7 +161,7 @@
 </li>
 
 <li>
-	<a href="mailto:anthem.marketplace@gmail.com">Contact Us @anthem.marketplace</a>
+	<a href="mailto:anthem.marketplace@gmail.com">Contact Us @Admin</a>
 </li>
 <li>
 	<a href="">Term of Service</a>
