Minor change of chat channel. Channel visible switch will be invisible until online user list is not empty

--- a/template/base.html
+++ b/template/base.html
@@ -270,6 +270,7 @@
 			function(result){
 				switch(result){
 					case '-1':
+						j$('#channel-visible-switch').hide();						
 						j$().toastmessage('showNoticeToast','No one is availabe to chat at this moment');
 						break;
 					default:
@@ -280,6 +281,7 @@
 							html+='<option value="'+users[i]+'">'+users[i]+'</option>';
 						}
 						j$('#online-user-list').html(html);
+						j$('#channel-visible-switch').fadeIn(400);						
 						break;
 				}// end of switch
 			}
