--- a/template/base.html
+++ b/template/base.html
@@ -284,7 +284,7 @@
 						j$('#online-user-list').html(html);
 						j$('#channel-visible-switch').fadeIn(400);						
 						
-						j$().toastmessage('showNoticeToast',users.length+' users are online. Welcome to Anthem Market Place Chat.");
+						j$().toastmessage('showNoticeToast',users.length+' users are online. Welcome to Anthem Market Place Chat.');
 						break;
 				}// end of switch
 			}
