Add a help icon to status tray. This links to google site help wiki for this market place.

--- a/template/base.html
+++ b/template/base.html
@@ -89,15 +89,20 @@
 		{% endif %}
 		
 		{% if me.can_be_doc() %}
-		<img src="http://cdn4.iconfinder.com/data/icons/SIGMA/medical/png/128/doctor.png" height="30px" title="Doc role"/>
+		<img src="http://cdn4.iconfinder.com/data/icons/SIGMA/medical/png/128/doctor.png" height="30px" title="You have a Doc membership"/>
 		{% endif %}
 
 		{% if me.can_be_nur() %}
-		<img src="http://cdn3.iconfinder.com/data/icons/medicalvista/128x128/nurse.png" height="30px" tile="Nur role"/>
+		<img src="http://cdn3.iconfinder.com/data/icons/medicalvista/128x128/nurse.png" height="30px" title="You have a Nur membership"/>
 		{% endif %}
 	
 		<!-- chat icon -->
 		<img id="you-have-chat" src="http://cdn5.iconfinder.com/data/icons/ie_Birdies/128/twitter_bird_5.png" title="You have got chat!"/>
+
+		<!-- help icon -->
+		<a href="https://sites.google.com/site/anthemmarketplacehelp/deal-flow">
+		<img id="help" src="http://cdn3.iconfinder.com/data/icons/pleasant/Help-File.png" height="30px" title="Get Help"/>
+		</a>
 		
 		</div>
 	</td><td style="text-align:right;">
