getJSON url needs a &callback=? for IE to work

--- a/template/PublishNewBuyOrder.html
+++ b/template/PublishNewBuyOrder.html
@@ -109,7 +109,7 @@
     	
     	// search engine www.amazon.com
     	var cse='016432411100893507841:y0sw886dln8';
-    	var url=encodeURI('https://www.googleapis.com/customsearch/v1?key='+api_key+'&cx='+cse+'&searchType=image&imgSize=large&safe=high&num='+googleSearchStep+'&start='+googleSearchStart+'&q='+term);
+    	var url=encodeURI('https://www.googleapis.com/customsearch/v1?key='+api_key+'&cx='+cse+'&searchType=image&imgSize=large&safe=high&num='+googleSearchStep+'&start='+googleSearchStart+'&q='+term+'&callback=?');
     	
     	// reset input boxes
     	imgArray=[];
