--- a/template/base.html
+++ b/template/base.html
@@ -214,7 +214,9 @@ Chat
 	<script src="http://code.highcharts.com/highcharts-more.js"></script>
 	<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
-	
+	<!-- css3 workaround -->
+	<script type="text/javascript" src="/static/css3ie/modernizr.custom.18013.js"></script>
+		
 	<!-- google analytics -->
 	<script>
   	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -232,9 +234,6 @@ Chat
 	<script type="text/javascript">
 	// some global initialization
 	var j$=jQuery.noConflict();
-	
-	// fix IE getJSON issue
-	//j$.support.cors = true;	
 	
 	// set up chat polling
 	var chat_message_poller;
