Poll online chat user list when document ready so user can have a list to start with

--- a/template/base.html
+++ b/template/base.html
@@ -431,6 +431,10 @@ Chat
 		j$('#online-user-list').click(function(){
 			j$('input[name="receiver-name"]').val('@'+j$(this).val());			
 		});
+		
+		// to begin with, pull online chat user list
+		pollChatOnlineUsers();		
+		
 	});
 	</script>	
 	
