Removing all fills from a Rejected cart will delete this cart entirely. If this is still an open cart, we will reset the broker field to be None.

--- a/template/ReviewCart.html
+++ b/template/ReviewCart.html
@@ -111,11 +111,14 @@
 							tr.fadeOut(500,function(){
 								j$(this).remove();
 							});
-							
+							break;
+						case '-1': // this cart has been deleted
+							j$().toastmessage('showNoticeToast','This cart has been deleted');
 							// if this is the last row, we now have an empty cart
 							// redirect to browse page
-							//window.location.href = "/buyorder/browse";
+							window.location.href = "/buyorder/browse";
 							break;
+
 						default:
 							break;
 					}
