Save navigation icons local. URL can go dead so it is better to serve these files locally.

--- a/template/OrderBase.html
+++ b/template/OrderBase.html
@@ -5,7 +5,7 @@
 		{% if me.can_be_nur() %}
 		<li id="nav-buyorder-browse">
 			<a href="/buyorder/browse" title="Browse and shop">
-				<img src="http://cdn3.iconfinder.com/data/icons/unicons-vector-icons-pack/32/zoom-in-128.png" />
+				<img src="/static/img/zoom-in-128.png" />
 			</a>
 			<h3>Browse</h3>
 		</li>
@@ -13,7 +13,7 @@
 		<li id="nav-cart-review">
 			{% if cart %}
 			<a href="/cart/review?cart={{ cart.key.id() }}" title="Review my shopping cart">
-				<img src="http://cdn4.iconfinder.com/data/icons/devine_icons/128/PNG/Folder%20and%20Places/Stack.png" />
+				<img src="/static/img/Stack.png" />
 			</a>
 			<h3>My Cart</h3>
 			{% endif %}
@@ -23,7 +23,7 @@
 		{% if me.can_be_doc() %}
 		<li id="nav-buyorder-owner">
 			<a href="/buyorder/owner/{{ me.key.id() }}/" title="View my posted orders by category">
-				<img src="http://cdn5.iconfinder.com/data/icons/high-resolution-app-tab-bar-icons/60/Category.png" />
+				<img src="/static/img/Category.png" />
 			</a>
 			<h3>Inventory</h3>
 		</li>
@@ -32,7 +32,7 @@
 		{% if me.can_be_doc() %}
 		<li id="nav-buyorder-post">
 			<a href="/buyorder/new" title="Post a new order">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/57/compose-128.png" />
+				<img src="/static/img/compose-128.png" />
 			</a>
 			<h3>Post New</h3>
 		</li>
