--- a/template/ReportBase.html
+++ b/template/ReportBase.html
@@ -6,7 +6,7 @@
 		{% if me.can_be_nur() %}
 		<li id="nav-report-buyer">
 			<a href="/report/mybuyer/7/" title="Your dealer reports">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
+				<img src="/static/img/discount-128.png"/>
 			</a>
 			<h3>Dealers</h3>
 		</li>
@@ -15,14 +15,14 @@
 		{% if me.can_be_doc() %}
 		<li id="nav-report-buyorder">
 			<a href="/report/buyorder/7/" title="Your sales reports">
-				<img src="http://cdn2.iconfinder.com/data/icons/picons-essentials/71/discount-128.png"/>
+				<img src="/static/img/discount-128.png"/>
 			</a>
 			<h3>Products</h3>
 		</li>
 
 		<li id="nav-report-myseller">
 			<a href="/report/myseller/7/" title="Your seller reports">
-				<img src="http://cdn3.iconfinder.com/data/icons/people-icons/64/Group_of_People-128.png"/>
+				<img src="/static/img/Group_of_People-128.png"/>
 			</a>
 			<h3>Vendors</h3>
 		</li>
@@ -30,7 +30,7 @@
 
 		<li id="nav-report-myincome">
 			<a href="/report/myincome/7/" title="Your income reports">
-				<img src="http://cdn3.iconfinder.com/data/icons/block/32/check_money-128.png"/>
+				<img src="/static/img/check_money-128.png"/>
 			</a>
 			<h3>Income</h3>
 		</li>
