--- a/template/CartBase.html
+++ b/template/CartBase.html
@@ -6,7 +6,7 @@
 		{% if me.can_be_nur() %}
 		<li id="nav-cart-as-seller">
 			<a href="/cart/manage/seller" title="Manage carts as a seller">
-				<img src="http://cdn3.iconfinder.com/data/icons/interface/100/minus_button_1-128.png" />
+				<img src="/static/img/minus_button_1-128.png" />
 			</a>
 			<h3>Selling Carts</h3>
 		</li>
@@ -16,7 +16,7 @@
 		{% if me.can_be_doc() %}
 		<li id="nav-cart-as-buyer">
 			<a href="/cart/manage/buyer" title="Manage carts as a buyer">
-				<img src="http://cdn5.iconfinder.com/data/icons/cosmo-player/40/button_new_2-128.png" />
+				<img src="/static/img/button_new_2-128.png" />
 			</a>
 			<h3>Buying Carts</h3>
 		</li>
