--- a/template/base.html
+++ b/template/base.html
@@ -229,8 +229,12 @@ Chat
 	</script>
 
 	<!-- google wallet -->
+	<!-- sandbox 
 	<script src="https://sandbox.google.com/checkout/inapp/lib/buy.js"></script>	
-        	
+	-->
+	<script src="https://wallet.google.com/inapp/lib/buy.js"></script>        	
+	
+	
 	<script type="text/javascript">
 	// some global initialization
 	var j$=jQuery.noConflict();
