--- a/template/BrowseBuyOrderById.html
+++ b/template/BrowseBuyOrderById.html
@@ -96,7 +96,7 @@
     		<h4>Posted On <span id="infocus-subtitle">{{ order.created_time }}</span><h4>
     	</div>
     	<div class="image-house">
-    		{% if me.key == order.owner %}
+    		{% if me.key == order.owner or me.can_be_super() %}
 				<a href="/buyorder/edit/{{ order.key.id() }}/" class="command-link">Edit</a>
 				 
 				{% if order.can_delete() %}
